2010-05-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Dom/CSharpAmbience.cs:
	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
	  Fixed 'Bug 600624 - Property initializer completion
	  unreliable'.

2010-05-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Highlighting/HighlightUsagesExtension.cs:
	  Track API changes.

2010-05-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Dom/CSharpAmbience.cs: UseFullName flag
	  works now for members.

2010-05-21  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.CSharp.Resolver/ResolveVisitor.cs: Fix grammar.

2010-05-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Resolver/NRefactoryResolver.cs:
	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
	  Fixed local lookup for ASP.NET.

2010-05-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Formatting/CSharpTextEditorIndentation.cs:
	  Disabled paste formatting (Bug 606041 - Additional blank
	  line after every text line then text is pasted from
	  clipboard).

2010-05-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Formatting/CSharpTextEditorIndentation.cs:
	  Fixed 'Bug 606884 - Control-enter in doc comments doesn't
	  prefix the new line'.

2010-05-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Completion/MemberCompletionData.cs: Fixed
	  'Bug 606959 - switch case completion doesn't handle
	  namespaces properly'.

2010-05-20  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* CSharpBinding.csproj:
	* MonoDevelop.CSharp.Completion/CompletionTextLinkMode.cs:
	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
	* MonoDevelop.CSharp.Completion/EventCreationCompletionData.cs:
	  Implemented request in 'Bug 607366 - Text link mode can
	  break texteditor badly'.

2010-05-19  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Formatting/CSharpTextEditorIndentation.cs:
	  Improved semicolon auto placement.
